--- a/Protobuf/ProtobufTest/ProtobufTest/ProtobufTest.vcxproj
+++ b/Protobuf/ProtobufTest/ProtobufTest/ProtobufTest.vcxproj
@@ -147,10 +147,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Info.pb.cc" />
     <ClCompile Include="Persion.pb.cc" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Info.pb.h" />
     <ClInclude Include="Persion.pb.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
