--- a/Preparation/07.工厂类编码解码-测试代码/EncDecCode/EncDecCode/EncDecCode.vcxproj
+++ b/Preparation/07.工厂类编码解码-测试代码/EncDecCode/EncDecCode/EncDecCode.vcxproj
@@ -191,6 +191,9 @@ libprotocd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     <ClInclude Include="RespondFactory.h" />
     <ClInclude Include="Response.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
